@@ -1,3 +1,11 @@
+2004-07-02  Mark McLoughlin  <mark@skynet.ie>
+
+	Fix for bug #145141.
+
+	* backends/markup-tree.c: (load_subdirs): recognise
+	subdirs which don't contain a %gconf.xml file but do
+	contain a %gconf-tree.xml file.
+
 2004-07-01  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* configure.in: Added "ne" Nepali in ALL_LINGUAS
